# pam-send-slack-message

./: .gitignore  Cargo.toml  Makefile  README.md  envrc.sample
src/: main.rs  settings.default.toml  settings.rs
